fix: Fix gap

--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -112,7 +112,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: end;
-    margin-bottom: 8px;
+    margin-bottom: 20px;
     gap: 10px;
 }
 
